Update package dependencies: remove duplicate wavefile entry and upgrade nodemon to version 3.1.11

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
         "tonal": "^6.4.2",
         "wav": "^1.0.2",
         "wavefile": "^11.0.0",
-        "web-audio-api": "^0.2.2"
+        "wavefile": "^11.0.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.19"
+        "nodemon": "^3.1.11"
     }
 }
